RbA Developer Org/src/objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>Base_Unit__c</fullName>
        <label>Base Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corrosion_Resistant__c</fullName>
        <label>Corrosion Resistant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dual_Color_Exterior__c</fullName>
        <label>Dual Color Exterior</label>
        <picklist>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandstone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terratone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocoa Bean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red Rock</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dual_Color_Interior__c</fullName>
        <label>Dual Color Interior</label>
        <picklist>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canvas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dual_Color__c</fullName>
        <label>Dual Color Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gliding_Screen__c</fullName>
        <label>Gliding Screen</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grilles__c</fullName>
        <description>Price is per sash</description>
        <label>Grilles Between Glass</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specialty_Glazing__c</fullName>
        <label>Specialty Glazing</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
</CustomObject>